# ros2-mobile-robot

./: README.md
3d-design/: Base_New.SLDPRT  Head.SLDPRT  banhphu.SLDPRT  dem - Copy.SLDPRT  dem.SLDPRT  mobile.SLDASM  perçin - Copy.SLDPRT  perçin.SLDPRT  wheelchuan.SLDPRT
mobile/: CMakeLists.txt  package.xml
mobile/config/: ekf.yaml  history.yaml  nav2_params.yaml  predefined_goals.yaml
mobile/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  nav2.launch.py  spawn_obstacles.launch.py
mobile/map/: map.pgm  map.yaml  map1.pgm  map1.yaml  map3.pgm  map3.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map_gui.yaml
mobile/meshes/: base_footprint.STL  base_link.STL  cam_gan.STL  cam_xa.STL  imu.STL  laser.STL  left_wheel.STL  phaisau_duoi.STL  phaisau_tren.STL  right_wheel.STL  traisau_duoi.STL  traisau_tren.STL  truocphai_duoi.STL  truocphai_tren.STL  truoctrai_duoi.STL  truoctrai_tren.STL
mobile/models/: obstacle_bar.sdf  obstacle_box.sdf
mobile/rviz/: rviz.rviz
mobile/scripts/: camera_to_costmap_node.py  goal_markers.py  lds50cr.py  lidar_filter.py  lidar_filter_real.py  monitor_realtime_tab.py  monitor_tab.py  moving_obstacle.py  ros_worker.py  status_bar.py  teleop_gui.py  tracking_model.py  waypoint_dialog.py
mobile/urdf/: mobile.csv  mobile.urdf
mobile/world/: maze
