<?xml version="1.0"?>
<package format="3">
  <name>mobile</name>
  <version>0.0.0</version>
  <description>Mobile robot simulation package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <depend>sensor_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
